--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/crowntj07/burger#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "method-override": "^3.0.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {}
